# helix

./: .gitignore  AGENTS.md  Architecture_Diagram.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Implementation_Roadmap.md  LICENSE  Plan.md  README.md  Technical_Implementation_Plan_Sum_Check_Module.md  debug_r1cs_test.rs  gpa_architecture.md  implementation-plan.md  spartan-whir-twist-shout-guide.md  sum_check_plan.md  sumcheck_implementation_plan.md
.github/workflows/: test.yml
.kilocode/: mcp.json
benches/: fft_bench.rs  iteration_bench.rs  parallelism_bench.rs  poseidon2_spartan_bench.rs  reslicing_bench.rs  unsafe_bench.rs
examples/: helix.rs
src/: error.rs  lib.rs  merkle_tree.rs  pcs.rs  prover.rs
src/field/: mod.rs
src/helix/: mod.rs  prover.rs
src/helix/r1cs/: mod.rs  poseidon2.rs
src/helix/sumcheck/: batch_sumcheck.rs  mod.rs  outer.rs
src/merkle/: mod.rs  tree.rs
src/pcs/: indexing_pattern.md  mod.rs  ntt.rs  prover.rs  utils.rs  verifier.rs
src/poly/: eq.rs  mle.rs  mod.rs  sparse.rs
src/protocols/: batch_sumcheck.rs  mod.rs  univariate.rs
src/r1cs/: mod.rs  poseidon2.rs  poseidon_summary.md
src/spartan/: commitment.rs  contraints.rs  error.rs  mod.rs  product.rs  prover.rs  r1cs.rs  spark.rs  sparse.rs  sparse_tests.rs  sumcheck.rs  univariate.rs
src/spartan/r1cs/: mod.rs  poseidon2.rs
src/spartan/spark/: commit.rs  gkr.rs  gpa.rs  mod.rs  oracles.rs  spark.rs  sparse.rs
src/spartan/sumcheck/: batch_sumcheck.rs  batched_cubic_sumcheck.rs  cubic.rs  cubic_sumcheck.rs  inner.rs  inner_sumcheck.rs  mod.rs  outer.rs  outer_sumcheck.rs  pcs.rs  spark.rs  spark_sumcheck.rs  tests.rs
src/sumcheck/: config.rs  constraint.rs  enhanced_prover.rs  error.rs  mod.rs  prover.rs  sparse.rs  univariate.rs  verifier.rs
src/sumcheck/optimizations/: karatsuba.rs  mod.rs  skip_rounds.rs  small_value.rs
src/sumcheck/traits/: challenge.rs  common.rs  composer.rs  field_adapter.rs  mod.rs  prover.rs  verifier.rs
src/transcript/: challenger.rs  mod.rs
src/utils/: challenger.rs  commitment.rs  eq.rs  merkle_tree.rs  mod.rs  polynomial.rs  sparse.rs
