[package]
name = "helix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blake3 = "1.8.2"
p3-baby-bear = "0.3.0"
p3-field = "0.3.0"
p3-monty-31 = "=0.3.0"
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
proptest = "1.4.0"
criterion = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
