[package]
name = "helix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blake3 = "1.8.2"
itertools = "0.13.0"
p3-baby-bear = "0.3.0"
p3-symmetric = "0.3.0"
p3-field = "0.3.0"
p3-monty-31 = "=0.3.0"
p3-maybe-rayon = { version = "0.3.0", features = ["parallel"]}
serde = "1.0.219"
serde_json = "1.0.140"
rayon = "1.11.0"
rand = "0.8.5"
thiserror = "1.0.63"
p3-dft = { version = "0.3.0", features = ["parallel"]}
p3-matrix = "0.3.0"

[dev-dependencies]
proptest = "1.4.0"
criterion = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
debug = false

[[bench]]
name = "fft_bench"
harness = false

[[bench]]
name = "iteration_bench"
harness = false

[[bench]]
name = "reslicing_bench"
harness = false

[[bench]]
name = "unsafe_bench"
harness = false

[[bench]]
name = "parallelism_bench"
harness = false

[[bench]]
name = "poseidon2_spartan_bench"
harness = false
