[package]
name = "helix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blake3 = { version = "1.8.2", features = ["neon", "serde", "digest"] }
itertools = "0.13.0"
p3-baby-bear = { version = "0.3.0", features = ["nightly-features"] }
p3-symmetric = "0.3.0"
p3-field = "0.3.0"
p3-monty-31 = "=0.3.0"
p3-maybe-rayon = { version = "0.3.0", features = ["parallel"]}
serde = "1.0.219"
serde_json = "1.0.140"
rayon = "1.11.0"
rand = "0.8.5"
thiserror = "1.0.63"
p3-dft = { version = "0.3.0", features = ["parallel"]}
p3-matrix = "0.3.0"
sha3 = "0.11.0-rc.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features= ["env-filter"]}
tracing-profile = { version = "0.10.11" }
p3-merkle-tree = "0.3.0"
hybrid-array = "0.4.5"
p3-keccak = { version = "0.3.0", features = ["nightly-features"]}


[dev-dependencies]
proptest = "1.4.0"
criterion = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
debug = false

[[bench]]
name = "iteration_bench"
harness = false

[[bench]]
name = "reslicing_bench"
harness = false

[[bench]]
name = "unsafe_bench"
harness = false

[[bench]]
name = "parallelism_bench"
harness = false

[[bench]]
name = "poseidon2_spartan_bench"
harness = false

[[example]]
name = "helix"
